feat: change title

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -23,7 +23,7 @@
     <meta name="msapplication-TileColor" content="#6F66F4">
     <meta name="theme-color" content="#6F66F4">
 
-    <title>Goosta</title>
+    <title>react-chat</title>
   </head>
   <body>
     <noscript>
